xserver-xorg-input-mouse (1:1.5.0-1) UNRELEASED; urgency=low

  * New upstream release.
  * Bump the build-dep on xutils-dev (>= 1:7.5~1).
  * Build against Xserver 1.7.

 -- Timo Aaltonen <tjaalton@ubuntu.com>  Sat, 05 Dec 2009 01:49:04 +0200

xserver-xorg-input-mouse (1:1.4.0-4) unstable; urgency=low

  * Rename the fdi file to match what we're installing... (closes: #542806)

 -- Julien Cristau <jcristau@debian.org>  Sun, 23 Aug 2009 20:12:24 +0200

xserver-xorg-input-mouse (1:1.4.0-3) unstable; urgency=low

  * Add README.source, bump Standards-Version to 3.8.3.
  * Install an fdi file to pick up the mouse driver on kfreebsd (closes:
    #542806).  Thanks, Aurélien Jarno!
  * Fix DEB_BUILD_OPTIONS parsing to use space-separated options.
  * Remove myself from Uploaders, I don't maintain this driver.

 -- Julien Cristau <jcristau@debian.org>  Sun, 23 Aug 2009 11:10:16 +0200

xserver-xorg-input-mouse (1:1.4.0-2) unstable; urgency=low

  * Upload to unstable.

 -- Julien Cristau <jcristau@debian.org>  Thu, 09 Apr 2009 16:22:01 +0100

xserver-xorg-input-mouse (1:1.4.0-1) experimental; urgency=low

  * New upstream release.
  * Run autoreconf on build.
  * Handle parallel builds.
  * Build-depend on xserver 1.6 rc1, automake, libtool and xutils-dev 1:7.4+4.
  * Add copyright notices for OS mouse code to debian/copyright (from
    upstream's COPYING).

 -- Julien Cristau <jcristau@debian.org>  Wed, 21 Jan 2009 21:53:06 +0100

xserver-xorg-input-mouse (1:1.3.0-2) experimental; urgency=low

  * Build against xserver 1.5 rc5.

 -- Julien Cristau <jcristau@debian.org>  Mon, 14 Jul 2008 01:56:30 +0200

xserver-xorg-input-mouse (1:1.3.0-1) unstable; urgency=low

  * New upstream release.
  * Drop patch added in 1:1.2.3-2, it's applied in this release.
  * Drop the XS- prefix from Vcs-* control fields.
  * Run dpkg-shlibdeps with --warnings=6.  Drivers reference symbols from
    /usr/bin/Xorg and other modules, and that's not a bug, so we want